# MC-Distil

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
mc_distil/: __init__.py
mc_distil/models/: __init__.py  base.py  mobilenetv2.py  model_dict.py  resnet.py  shufflenetv2.py
mc_distil/scripts/: runner_ce.sh  runner_dgkd.sh  runner_kd.sh  runner_mcdistil.sh  runner_meta.sh  runner_meta_m.sh  runner_takd.sh
mc_distil/scripts/image_classification/: runner_ce.sh  runner_kd.sh  runner_meta.sh
mc_distil/scripts/object_detection/: runner_dgkd_coco.sh  runner_kd.sh  runner_mcdistil.sh  runner_meta.sh  runner_pretrain.sh  runner_rmc.sh  runner_takd.sh
mc_distil/training/: __init__.py  train_CE.py  train_dgkd.py  train_kd.py  train_mcdistil.py  train_meta.py  train_meta_m.py  train_takd.py
mc_distil/training/image_classification/: train_CE.py  train_dgkd.py  train_kd.py  train_mcdistil.py  train_meta.py  train_takd.py
mc_distil/training/object_detection/: pretrain.py  train_dgkd.py  train_kd.py  train_mcdistil.py  train_meta.py  train_rmc.py  train_takd.py
mc_distil/utils/: __init__.py  config.py  core.py  disk.py  initialization.py  logging.py
