[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-distil"
version = "0.1.0"
description = "Knowledge Distillation"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "matplotlib>=3.3.0",
    "scipy>=1.6.0",
    "Pillow>=8.0.0",
    "pytz>=2021.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0"
]

[project.urls]
Homepage = "https://github.com/your-username/mc-distil"
Repository = "https://github.com/your-username/mc-distil"
Documentation = "https://github.com/your-username/mc-distil"
"Bug Tracker" = "https://github.com/your-username/mc-distil/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mc_distil*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"